# lib_bodium

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
apps/bst_trial/: .gitignore  Cargo.toml
apps/bst_trial/data/: bst20.txt  bst40.txt
apps/bst_trial/src/: main.rs
apps/collinear_points/: Cargo.toml  output.txt
apps/collinear_points/data/: bad2.txt
apps/collinear_points/src/: lib.rs  main.rs  matplotlib.rs
apps/collinear_points/src/brute_force/: mod.rs
apps/collinear_points/src/fast_collinear/: mod.rs
apps/graphs/: .gitignore  Cargo.toml  readme.md
apps/graphs/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/algos/: bfs_paths.rs  dfs_paths.rs  mod.rs
core/src/algos/graph/: dfs_paths.rs  directed_bfs.rs  directed_dfs.rs  mod.rs
core/src/data_containers/: digraph.rs  mod.rs
core/src/data_containers/bag/: mod.rs
core/src/data_containers/binary_st/: bst.rs  mod.rs  node.rs  tree.rs
core/src/data_containers/binary_tree/: bst.rs  mod.rs  node.rs  tree.rs
core/src/data_types/: mod.rs  seeder.rs  visualize.rs  visualize_rbt.rs
src/: lib.rs
src/_d_linked_list/: mod.rs
src/bag/: mod.rs
src/data_containers/graph/: mod.rs
src/data_containers/linked_list/: mod.rs  node.rs
src/data_containers/queue/: mod.rs
src/data_containers/stack/: mod.rs
src/data_types/: mod.rs
src/data_types/input/: mod.rs
src/data_types/point/: mod.rs  slope_order.rs
src/graph/: mod.rs
src/input/: mod.rs
src/linked_list/: mod.rs  node.rs
src/point/: mod.rs  slope_order.rs
src/queue/: mod.rs
src/stack/: mod.rs
(+27 files in other folders)
