[package]
name = "collinear_points"
version = "0.1.0"
edition = "2024"
default-run = "fast_collinear"

[[bin]]
name = "fast_collinear"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/bin/test.rs"

[dependencies]
anyhow = "1.0.103"
compare = "0.1.0"
pretty_assertions = "1.4.1"
plotters = "0.3"
show-image = { version = "0.14", features = ["image"] }
image = "0.25"

bodium_core = { workspace = true }
